--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,10 +127,23 @@ jobs:
     if: github.ref == 'refs/heads/main'
     
     steps:
-    - name: Deploy to production
+    - uses: actions/checkout@v2
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - name: Deploy to AWS ECS
       run: |
-        echo "Add your deployment commands here"
-        # Example: Deploy to cloud platform
-        # - AWS ECS
-        # - Google Cloud Run
-        # - Azure Container Apps 
+        aws ecs update-service \
+          --cluster content-optimizer-cluster \
+          --service content-optimizer-service \
+          --force-new-deployment \
+          --region ${{ secrets.AWS_REGION }} 
