--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,47 @@
 # Core Dependencies
-streamlit==1.28.2
-fastapi==0.104.1
-uvicorn==0.24.0
-python-dotenv==1.0.0
-pydantic==2.5.1
-sqlalchemy==2.0.23
-alembic>=1.11.0
+fastapi>=0.104.0
+uvicorn>=0.24.0
+python-dotenv>=1.0.0
+pydantic>=2.0.0
 
 # AI and NLP
-openai==1.3.3
-anthropic==0.5.0
 nltk>=3.8.1
-spacy>=3.6.0
-transformers==4.35.2
+transformers>=4.30.0
+torch>=2.0.0
+sentence-transformers>=2.2.0
 
 # Data Processing
-pandas==2.1.3
-numpy==1.26.2
-beautifulsoup4==4.12.2
-requests==2.31.0
-python-multipart==0.0.6
-aiohttp>=3.8.0
-
-# Visualization
-plotly>=5.15.0
-altair>=5.0.0
+numpy>=1.24.0
+pandas>=2.0.0
+Pillow>=9.5.0
+python-multipart>=0.0.6
 
 # Testing
-pytest==7.4.3
-pytest-cov>=4.1.0
-pytest-asyncio==0.21.1
-httpx==0.25.1
-
-# Security
-python-jose[cryptography]==3.3.0
-passlib==1.7.4
-python-multipart==0.0.6
-
-# Documentation
-mkdocs>=1.4.3
-mkdocs-material>=9.1.0
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+httpx>=0.25.1
 
 # Development
-black==23.11.0
-flake8==6.1.0
-mypy==1.7.0
-isort==5.12.0
-bandit==1.7.5
-safety==2.3.5
+black>=23.11.0
+flake8>=6.1.0
+mypy>=1.7.0
+isort>=5.12.0
 
-# Additional dependencies
-psycopg2-binary==2.9.9
-redis==5.0.1
-scikit-learn==1.3.2
-torch==2.1.1 
+# Content Processing
+python-docx>=0.8.11
+PyPDF2>=3.0.1
+
+# Video Processing
+opencv-python>=4.8.0
+moviepy>=1.0.3
+imageio>=2.31.1
+
+# Audio Processing
+librosa>=0.10.0
+soundfile>=0.12.1
+numba>=0.57.1
+tqdm>=4.65.0
+
+# UI and Deployment
+gradio>=4.19.2
+python-magic>=0.4.27  # For file type detection 
