--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 max-line-length = 100
-exclude = .git,__pycache__,build,dist,*.egg-info
+exclude = .git,__pycache__,build,dist
 ignore = E203, W503
 
 [isort]
@@ -14,10 +14,12 @@ line_length = 100
 python_version = 3.9
 warn_return_any = True
 warn_unused_configs = True
-ignore_missing_imports = True
+disallow_untyped_defs = True
+disallow_incomplete_defs = True
 
 [tool:pytest]
 testpaths = tests
 python_files = test_*.py
+python_classes = Test*
 python_functions = test_*
 asyncio_mode = auto 
