--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,6 +14,8 @@ jobs:
       pull-requests: write
     steps:
     - uses: actions/checkout@v3
+      with:
+        persist-credentials: false
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -23,13 +25,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install black flake8 mypy isort
+        pip install -e ".[dev]"
 
     - name: Check code formatting
       run: |
         black . --check
         flake8 .
-        mypy . --ignore-missing-imports
+        mypy . --ignore-missing-imports --disallow-untyped-defs=false
         isort . --check-only
 
   test:
@@ -43,6 +45,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        persist-credentials: false
     
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
@@ -57,8 +61,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest pytest-asyncio pytest-cov
+        pip install -e ".[dev]"
 
     - name: Run tests with coverage
       run: |
@@ -79,6 +82,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        persist-credentials: false
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -88,6 +93,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -e ".[dev]"
         pip install mkdocs mkdocs-material
 
     - name: Build and deploy documentation
