--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,53 @@
 requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[project]
+name = "automated-content-optimizer"
+version = "1.0.0"
+description = "Multi-modal content processing and optimization system"
+requires-python = ">=3.9"
+authors = [
+    {name = "Your Name", email = "your.email@example.com"}
+]
+dependencies = [
+    "fastapi>=0.68.0",
+    "uvicorn>=0.15.0",
+    "python-multipart>=0.0.5",
+    "python-jose[cryptography]>=3.3.0",
+    "passlib[bcrypt]>=1.7.4",
+    "sqlalchemy>=1.4.0",
+    "pydantic>=1.8.0",
+    "python-dotenv>=0.19.0",
+    "nltk>=3.6.0",
+    "transformers>=4.0.0",
+    "numpy>=1.21.0,<2.0.0",
+    "pandas>=1.3.0",
+    "beautifulsoup4>=4.9.0",
+    "requests>=2.26.0",
+    "aiofiles>=0.7.0",
+    "python-magic>=0.4.24",
+    "pillow>=8.3.0",
+    "moviepy>=1.0.3",
+    "librosa>=0.8.0",
+    "soundfile>=0.10.0",
+    "ffmpeg-python>=0.2.0",
+    "pytesseract>=0.3.8",
+    "openai-whisper>=20231117",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=6.0",
+    "pytest-cov>=2.12.0",
+    "black>=21.7b0",
+    "flake8>=3.9.0",
+    "mypy>=0.910",
+    "isort>=5.9.0",
+    "mkdocs>=1.2.0",
+    "mkdocs-material>=7.0.0",
+    "safety>=1.10.0"
+]
+
 [tool.black]
 line-length = 100
 target-version = ['py39']
